Replace `HttpClient` with `HttpURLConnection` to become compatible with Java 8